--- a/styles/contact.css
+++ b/styles/contact.css
@@ -21,8 +21,8 @@
 
 .contact-headline > svg {
   flex-shrink: 0;
-  width: clamp(2.5rem, 1.5909090909090908rem + 4.545454545454546vw, 5rem);
-  height: clamp(2.5rem, 1.5909090909090908rem + 4.545454545454546vw, 5rem);
+  width: clamp(2rem, 1.3613861386138613rem + 2.376237623762376vw, 3.5rem);
+  height: clamp(2rem, 1.3613861386138613rem + 2.376237623762376vw, 3.5rem);
   transform: rotate(180deg);
 }
 
@@ -206,7 +206,6 @@ body.dark .contact-socials-button {
 
 .contact-socials-button::after {
   width: max-content;
-  gap: 0.25rem;
   color: var(--black);
   font-size: 0.875rem;
   background-color: var(--secondary);
@@ -254,6 +253,16 @@ body.dark .contact-socials-button::after {
   .contact-container {
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+  .contact-card {
+    align-items: flex-start;
+  }
+  .contact-card-headline {
+    align-items: flex-start;
+  }
+  .contact-card-headline h3 {
+    max-width: 100%;
+    text-align: left;
   }
   .contact-card-link-wrapper {
     gap: 0.5rem;
